# citron

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile.am  README.md  _struct.c  _struct.h  a.out  appveyor.yml  asm.ctr  base.c  base_extensions.c  base_extensions.c~  bitcode.md  build_windows_package.bat  cachegrind.out.17095  cachegrind.out.5609  cachegrind.out.5827  cachegrind.out.6306  cachegrind.out.6554  callgrind.out.31226  citron.c  citron.c~  citron.h  citron_conv.h  citron_ensure.h  citron_lib.c  clisp.js  cmp.ctr  collections.c  collections.c~  collections.prep.c  compcompat_pthread.h  compile.ctr  compiler.c  compilerstub.c  configure  configure.ac  coroutine.c  (+79 more)
autohell/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
autohell/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
autohell/doc/: Makefile  Makefile.in  ctr.1  ctr.html  ctr.html_e  ctrstyle.css  docs.html  docs.ps  doxygen.conf  grammar.txt  pcre.txt  sman.ctr
autohell/examples/: Makefile  Makefile.in  apply  arrays.ctr  ctree.ctr  mips_emu.ctr  mp.ctr  pragma.ctr  reflect.ctr  serve.ctr  shit.ctr  shuffle.ctr  silly_progressbar.ctr  tuple.ctr  varargs.ctr
autohell/examples/fun/: #magic.lsp#  lisp.scm  rispy.ctr
autohell/examples/sdl/: sdl.ctr
autohell/examples/serialization/: generated (1).json  serializing.py  serializing.rb
autohell/examples/shit/: fib_unfinished_49259  fib_unfinished_99999  trash.ctr
autohell/examples/sm/: main.ctr
autohell/man/: Makefile  Makefile.in
autohell/scripts/: Library  Makefile  Makefile.am  Makefile.in  basemods  ccompletion.ctr  citron  collections.ctr  ctrc  documentation.ctr  fileutils.ctr  functional.ctr  heap.ctr  importlib.ctr  iterable.ctr  json.ctr  multiprocessing.ctr  one_liners.md  print.ctr  reflection.ctr  requests.ctr  sdl.ctr  string.ctr  stringio.ctr  switchcase.ctr  tcc  teash.ctr
autohell/src/: Makefile  Makefile.am  Makefile.in  _struct.c  _struct.h  base.c  base_extensions.c  citron.c  citron.h  citron_conv.h  citron_ensure.h  collections.c  compcompat_pthread.h  compiler.c  compilerstub.c  compilerutils.c  coroutine.c  coroutine.h  ctr_constants.c  ctr_preprocessor.c  ctrconfig  ctrconfig.c  ctypes.c  ctypes.h  dictionary.h  ffi  fiber.c  file.c  generator.c  generator.h  grapheme_break.c  importlib.c  inject.c  inline-asm.cpp  khash.h  lambdaf  lambdaf.h  lexer.c  lexer_plug.c  libcitron.la  (+30 more)
autohell/src/.deps/: libcitron_la-_struct.Plo  libcitron_la-base.Plo  libcitron_la-base_extensions.Plo  libcitron_la-citron.Plo  libcitron_la-collections.Plo  libcitron_la-coroutine.Plo  libcitron_la-ctypes.Plo  libcitron_la-fiber.Plo  libcitron_la-file.Plo  libcitron_la-generator.Plo  libcitron_la-importlib.Plo  libcitron_la-inject.Plo  libcitron_la-inline-asm.Plo  libcitron_la-lexer.Plo  libcitron_la-lexer_plug.Plo  libcitron_la-marshal.Plo  libcitron_la-memory.Plo  libcitron_la-parser.Plo  libcitron_la-promise.Plo  libcitron_la-reflect.Plo  libcitron_la-siphash.Plo  libcitron_la-structmember.Plo  libcitron_la-symbol.Plo  libcitron_la-symbol_cxx.Plo  libcitron_la-system.Plo  libcitron_la-utf8.Plo  libcitron_la-util.Plo  libcitron_la-walker.Plo  libcitron_la-world.Plo
autohell/src/.libs/: libcitron.la  libcitron.lai  libcitron.so.0
autohell/test/: Makefile  runtests.sh
autom4te.cache/: output.0  requests  traces.0
docs/: Doxyfile  ctr.1  ctr.html  ctr.html_e  docs.html  docs.ps  sman.ctr
examples/: 99beer.ctr  Makefile.am  Makefile.in  all.ctr  apply  arrays.ctr  boolean.ctr  case.ctr  dynamic.ctr  fizzbuzz.ctr  game-2048.ctr  hello.ctr  json.ctr  lambda.ctr  lol.ctr  lol.test  meh.ctr  mips_emu.ctr  parser.ctr  reflect.ctr  reverse.ctr  sfml.ctr  shared.ctr  sockets.ctr  storm.ctr  test  test.txt  testwebsockets.html  varargs.ctr
examples/fun/: cisp.ctr  cisp_lib.lsp  magic.lsp  prettifier.lsp  rispy.ctr
examples/sdl/: bigD.ctr  callgrind.out.14357  callgrind.out.17748  ninvaders.ctr  sdl.ctr
examples/serialization/: serializing.ctr  (+2 more)
extensions/: ccompletion.ctr  collections.ctr  documentation.ctr  fileutils.ctr  functional.ctr  heap.ctr  importlib.ctr  iterable.ctr  json.ctr  multiprocessing.ctr  print.ctr  reflection.ctr  requests.ctr  sdl.ctr  string.ctr  stringio.ctr  switchcase.ctr
ffi/: _struct.c  _struct.h  ctypes.h  reverse_sizes.h  structmember.c  structmember.h
headergen/: gen.ctr
hscomp/: ast.hs  lex.hs
integration/: grammar.iro
js_transpiler/: index.js
lambdaf/: lstdlib.h  main.c  makefile  stdlib.zero
libsocket/: makefile
llvm_expr_gen/: a.out  ast.hpp  ast_transform.cpp  citron_types.hpp  file.txt  fns.cpp  fns.hpp  makefile  ops.hpp
misc/: apt-constraint.sh  citron_windows.bat  fakeldconfig.cc  grammar.txt  install.bat
patches/: eval.patch
pcrs/: pcrs.c  pcrs.h
playground/: playground_client.js  playground_server.ctr
python/: preprop.py  pyinteg.py
src/: _struct.c  _struct.h  base.c  base_extensions.c  citron.c  citron.h  citron_ensure.h  collections.c  collections.prep.c  compcompat_pthread.h  compiler.c  compilerstub.c  config.h  coroutine.c  coroutine.h  ctr_preprocessor.c  ctrconfig.c  ctypes.c  ctypes.h  dictionary.h  fiber.c  file.c  gc.h  generator.c  generator.h  grapheme_break.c  importlib.c  inject.c  inline-asm.c  inline-asm.cpp  khash.h  lexer.c  lexer_plug.c  linkedlist.c  marshal.c  memory-boehm.h  memory.c  murmur3.c  murmur3.h  native-asm.h  (+20 more)
tcc/: Makefile  config.h  config.mak  configure  libtcc.c  libtcc_test  tcc  tcc.1  tcc.h  tccgen.c  tccpp.c
tests/: notest0197.ctr  notest0198.ctr  notest0262.exp  plg.ctr  plg.py  test0002.exp  test0003.ctr  test0004.ctr  test0004.exp  test0005.exp  test0006.ctr  test0006.exp  test0007.ctr  test0007.exp  test0008.ctr  test0009.ctr  test0009.exp  test0010.ctr  test0011.ctr  test0012.ctr  test0012.exp  test0013.ctr  test0013.exp  test0014.ctr  test0014.exp  test0015.ctr  test0015.exp  test0016.ctr  test0016.exp  test0017.ctr  test0017.exp  test0018.ctr  test0018.exp  test0019.exp  test0020.exp  test0021.ctr  test0021.exp  test0022.exp  test0023.exp  test0025.exp  (+475 more)
(+112 files in other folders)
